Implement PUT method on /staticroutes/{namespace}/{name} route to allow for updating existing staticroutes
